# synclair-client-example

./: .gitmodules  CMakeLists.txt  README.md  client.cpp  simple_server.py
Automation/: CMakeLists.txt
Automation/benchmarks/: benchmark.cpp
Automation/test_results/: benchmark_results.txt  system_test_results.txt  test_results.txt
Automation/tests/: system_test.cpp  test.cpp
include/: network_interface.hpp
src/: network_interface.cpp
test/: message.hpp  msg_defs.cpp  msg_defs.hpp  test_client.cpp  y
